<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="theme_dark">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="back_button_description">Назад</string>
    <string name="share_app_text">Курс по Андроид-разработке в Практикуме: https://practicum.yandex.kz/android-developer</string>
    <string name="share_app_title">Поделиться приложением через:</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_address">pavel.michka@yandex.ru</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="error_not_app_link">Нет приложения для открытия ссылки</string>
    <string name="error_not_app_email">Нет приложения для отправки e-mail</string>
    <string name="search_track_dot"> • </string>
    <string name="search_track_not_result">Ничего не нашлось</string>
    <string name="search_track_network_error">Проблемы со связью \n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_retry_button_text">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="durationTrack">0:00</string>
    <string name="media_library_empty">Ваша медиатека пуста</string>
    <string name="media_library_no_playlist">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="create_playlist_name_hint">Название*</string>
    <string name="create_playlist_description_hint">Описание</string>
    <string name="create_playlist_button">Создать</string>
    <string name="create_playlist_exit_title">Завершить создание плейлиста?</string>
    <string name="create_playlist_exit_message">Все несохраненные данные будут потеряны</string>
    <string name="create_playlist_exit_cancel">Отмена</string>
    <string name="create_playlist_exit_confirm">Завершить</string>
    <string name="create_playlist_created_toast">Плейлист %1$s создан</string>
    <string name="add_to_playlist_title">Добавить в плейлист</string>
    <string name="track_added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="playlist_share_content_description">Поделиться плейлистом</string>
    <string name="playlist_menu_content_description">Меню плейлиста</string>
    <string name="playlist_meta_format">%1$s • %2$s</string>
    <string name="playlist_tracks_empty">В этом плейлисте нет треков</string>
    <string name="playlist_track_delete_message">Хотите удалить трек?</string>
    <string name="playlist_share_empty">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_share_title">Поделиться плейлистом</string>
    <string name="playlist_menu_share">Поделиться</string>
    <string name="playlist_menu_edit">Редактировать информацию</string>
    <string name="playlist_menu_delete">Удалить плейлист</string>
    <string name="playlist_delete_message">Хотите удалить плейлист «%1$s»?</string>
    <string name="playlist_edit_title">Редактировать</string>
    <string name="playlist_save_button">Сохранить</string>
    <string name="dialog_no">НЕТ</string>
    <string name="dialog_yes">ДА</string>
    <string name="no_internet_connection">Отсутствует подключение к интернету</string>
</resources>
