<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.PlaylistMaker.Settings"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_toolbar"
        app:title="@string/settings"
        style="@style/SettingsToolbar"
        android:layout_marginBottom="24dp" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switch"
        style="@style/SettingsMaterialsText"
        android:text="@string/theme_dark"
        android:background="@drawable/switch_ripple_background"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share_text"
        style="@style/SettingsMaterialsText"
        android:text="@string/share"
        android:drawableEnd="@drawable/ic_share" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support"
        style="@style/SettingsMaterialsText"
        android:text="@string/support"
        android:drawableEnd="@drawable/ic_support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_agreement"
        style="@style/SettingsMaterialsText"
        android:text="@string/user_agreement"
        android:drawableEnd="@drawable/ic_arrow_right" />

</LinearLayout>
