<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/main_text_size"
        android:fontFamily="@font/ys_display_medium"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="@dimen/main_button_margin_horizontal"
        android:layout_marginTop="14dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginBottom="28dp" >

        <Button
            style="@style/MainButton"
            android:id="@+id/btn_search"
            android:text="@string/search"
            app:icon="@drawable/ic_vector" />

        <Button
            style="@style/MainButton"
            android:id="@+id/btn_media_library"
            android:layout_marginTop="@dimen/main_button_margin_top"
            android:text="@string/media_library"
            app:icon="@drawable/ic_media_library" />

        <Button
            style="@style/MainButton"
            android:id="@+id/btn_settings"
            android:layout_marginTop="@dimen/main_button_margin_top"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings" />
    </LinearLayout>

</LinearLayout>

