<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:layout_marginBottom="28dp">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button_description"
            app:tint="@color/black"
            android:foreground="?attr/selectableItemBackground" />

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="@dimen/settings_text_size_title"
            android:textColor="@color/black"
            android:fontFamily="@font/ys_display_medium"
            android:layout_gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="6dp">

        <TextView
            android:id="@+id/theme_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/theme_dark"
            style="@style/SettingsText"
            android:layout_gravity="center" />

        <Switch
            android:id="@+id/theme_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/linear_layout_padding_start"
        android:paddingEnd="@dimen/linear_layout_padding_end"
        android:layout_marginTop="@dimen/list_item_margin_top">

        <TextView
            android:id="@+id/share_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share"
            style="@style/SettingsText" />

        <ImageView
            style="@style/SettingsIcon"
            android:src="@drawable/ic_share" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/linear_layout_padding_start"
        android:paddingEnd="@dimen/linear_layout_padding_end"
        android:layout_marginTop="@dimen/list_item_margin_top">

        <TextView
            android:id="@+id/support"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/support"
            style="@style/SettingsText" />

        <ImageView
            android:src="@drawable/ic_support"
            style="@style/SettingsIcon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/linear_layout_padding_start"
        android:paddingEnd="@dimen/linear_layout_padding_end"
        android:layout_marginTop="@dimen/list_item_margin_top">

        <TextView
            android:id="@+id/user_agreement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_agreement"
            style="@style/SettingsText" />

        <ImageView
            android:src="@drawable/ic_arrow_right"
            style="@style/SettingsIcon" />

    </LinearLayout>

</LinearLayout>
