<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mediaLibraryFragment">

    <fragment
        android:id="@+id/mediaLibraryFragment"
        android:name="com.practicum.playlistmaker.presentation.media.MediaLibraryFragment"
        android:label="@string/media_library"
        tools:layout="@layout/fragment_media_library">
        <action
            android:id="@+id/action_mediaLibraryFragment_to_playerFragment"
            app:destination="@id/playerFragment" />
        <action
            android:id="@+id/action_mediaLibraryFragment_to_createPlaylistFragment"
            app:destination="@id/createPlaylistFragment" />
        <action
            android:id="@+id/action_mediaLibraryFragment_to_playlistFragment"
            app:destination="@id/playlistFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.practicum.playlistmaker.presentation.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_playerFragment"
            app:destination="@id/playerFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.practicum.playlistmaker.presentation.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/playerFragment"
        android:name="com.practicum.playlistmaker.presentation.player.PlayerFragment"
        android:label="PlayerFragment"
        tools:layout="@layout/fragment_player">
        <argument
            android:name="track"
            app:argType="com.practicum.playlistmaker.presentation.models.TrackUiDto" />
        <action
            android:id="@+id/action_playerFragment_to_createPlaylistFragment"
            app:destination="@id/createPlaylistFragment" />
    </fragment>

    <fragment
        android:id="@+id/createPlaylistFragment"
        android:name="com.practicum.playlistmaker.presentation.media.playlist.CreatePlaylistFragment"
        android:label="@string/new_playlist"
        tools:layout="@layout/fragment_create_playlist">
        <argument
            android:name="playlist"
            app:argType="com.practicum.playlistmaker.presentation.models.PlaylistEditUiDto"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/playlistFragment"
        android:name="com.practicum.playlistmaker.presentation.media.playlist.PlaylistFragment"
        android:label="PlaylistFragment"
        android:theme="@style/Theme.PlaylistMaker.Playlist"
        tools:layout="@layout/fragment_playlist">
        <argument
            android:name="playlistId"
            app:argType="long" />
        <action
            android:id="@+id/action_playlistFragment_to_playerFragment"
            app:destination="@id/playerFragment" />
        <action
            android:id="@+id/action_playlistFragment_to_createPlaylistFragment"
            app:destination="@id/createPlaylistFragment" />
    </fragment>

</navigation>
